--- a/Day_6-Dec-11/HTTP/package.json
+++ b/Day_6-Dec-11/HTTP/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "node",
+  "name": "http",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "node pre.js"
+    "dev": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "chalk": "^5.3.0",
-    "commander": "^12.1.0",
-    "ethers": "^6.13.4",
-    "express": "^4.21.2",
-    "path": "^0.12.7"
+    "express": "^4.21.2"
   }
 }
