--- a/Day_3-Dec_8/web-3-Wallet-adapters/wallets-wagmi/package.json
+++ b/Day_3-Dec_8/web-3-Wallet-adapters/wallets-wagmi/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@tanstack/react-query": "^5.62.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "viem": "^2.21.54"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
